Fixed bug #79094 (Crashing when running recursion function)